@@ -43,6 +43,7 @@ NODE DEFAULT
 	MAXVALUE 100
 # 	USESCALE none
 	LABELBGCOLOR 250 250 255
+	LABELFONTCOLOR contrast
 
 LINK DEFAULT
 	BWLABEL bits
@@ -67,7 +68,8 @@ NODE node80111
 	ICON 48 32 round
 	AICONFILLCOLOR 255 0 0
 	LABELOFFSET S
-	TARGET fping:212.212.100.126
+#	TARGET fping:212.212.100.126
+	LABELBGCOLOR 10 10 10 
 
 NODE node00342
 	LABEL Node342copy
