@@ -1,7 +1,9 @@
 
 0.95	ADDED - You can add a 'tag' to a SCALE line, to be used in ICON or LABELs later.
         ADDED - USEICONSCALE - colorize icon images (based on patches from llow)
-	ADDED - Map titles show up in browser title now.
+		ADDED - LABELFONTCOLOR can use a special value of 'contrast' to always contrast with the label colour.
+		ADDED - Artificial Icons. Special icon 'filenames' - 'box' 'round' create a shaped icon without any file.
+		ADDED - Map titles show up in browser title now.
 	ADDED - a basic 'live view' function which generates a map on demand. Sometimes. It's not very useful.
 	ADDED - improved data-source picker in editor: host filter
 	ADDED - improved data-source picker in editor: option to aggregate data sources
@@ -22,6 +24,7 @@
 	ADDED - a sample 'skeleton' DS plugin
 	CHANGE - DS plugins are able to return negative results now ***breaks user-developed DS plugins***
 	CHANGE - the scale: prefix for the RRD DS plugin can take negative scale factors
+	CHANGE - plugins are each created as a single object now. Result: the plugin can cache results internally.
 	FIXED - KEYOUTLINECOLOR is actually used now (thanks to llow once more)
 	FIXED - Editor doesn't throw away WIDTH and HEIGHT with no BG image
 	FIXED - Cacti Data-source and Graph picker doesn't restrict scrolling or resizing anymore
